--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.2",
     "core-js": "^3.6.5",
+    "postcss": "^8.4.5",
     "register-service-worker": "^1.7.1",
+    "tailwindcss": "^3.0.17",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
