--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "autoprefixer": "^10.4.2",
+    "@headlessui/vue": "^1.4.3",
+    "@heroicons/vue": "^1.0.5",
+    "@tailwindcss/postcss7-compat": "^2.2.17",
     "core-js": "^3.6.5",
-    "postcss": "^8.4.5",
+    "postcss": "^7.0.39",
     "register-service-worker": "^1.7.1",
-    "tailwindcss": "^3.0.17",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
+    "vee-validate": "^4.5.8",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
