--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@heroicons/vue": "^1.0.5",
     "@tailwindcss/postcss7-compat": "^2.2.17",
     "core-js": "^3.6.5",
+    "firebase": "^9.6.5",
     "postcss": "^7.0.39",
     "register-service-worker": "^1.7.1",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
